--- a/src/has/CheckOut.form
+++ b/src/has/CheckOut.form
@@ -23,7 +23,10 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <Component id="jPanel1" min="-2" pref="770" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -50,7 +53,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="20" y="30" width="510" height="210"/>
+              <AbsoluteConstraints x="20" y="30" width="740" height="210"/>
             </Constraint>
           </Constraints>
 
@@ -87,7 +90,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="22" y="260" width="510" height="180"/>
+              <AbsoluteConstraints x="12" y="260" width="750" height="180"/>
             </Constraint>
           </Constraints>
 
@@ -99,11 +102,15 @@
                   <Font name="Monotype Corsiva" size="18" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="4" rowCount="0">
+                  <Table columnCount="8" rowCount="0">
                     <Column editable="true" title="Customer Name" type="java.lang.Object"/>
                     <Column editable="true" title="Unique Number" type="java.lang.Object"/>
-                    <Column editable="true" title="Total Bill" type="java.lang.Object"/>
-                    <Column editable="true" title="Amount to be paid" type="java.lang.Object"/>
+                    <Column editable="true" title="Total Catering Bill" type="java.lang.Object"/>
+                    <Column editable="true" title="Advance" type="java.lang.Object"/>
+                    <Column editable="true" title="Room Rent" type="java.lang.Object"/>
+                    <Column editable="true" title="Tariff" type="java.lang.Object"/>
+                    <Column editable="true" title="Discount" type="java.lang.Object"/>
+                    <Column editable="true" title="Final Bill" type="java.lang.Object"/>
                   </Table>
                 </Property>
               </Properties>
