--- a/src/has/advancebooking.form
+++ b/src/has/advancebooking.form
@@ -328,7 +328,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="250" y="380" width="110" height="30"/>
+              <AbsoluteConstraints x="250" y="380" width="120" height="30"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -354,7 +354,7 @@
         <Component class="javax.swing.JButton" name="jButton5">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="F:\SEMESTER-4\Software\Java\Travel\calendar_icon.png"/>
+              <Image iconType="3" name="/has/calendar_icon.png"/>
             </Property>
           </Properties>
           <Events>
@@ -362,7 +362,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="390" y="80" width="30" height="-1"/>
+              <AbsoluteConstraints x="390" y="80" width="30" height="30"/>
             </Constraint>
           </Constraints>
         </Component>
